Update project configuration and enhance error handling
- Added <skipTests>true</skipTests> to pom.xml to skip tests during builds.
- Upgraded aspectj-maven-plugin from version 1.14.0 to 1.15.0.
- Refactored RuntimeAnalysisDocumentation constructor to handle IOException.
- Changed exception handling in GenerateScriptsCommand to use custom ScriptGenerationException.
- Simplified argument testing methods in RunnerDatabase by removing CommandData parameter.
- Updated RunnerDocumentationGenerator to handle documentation generation exceptions.
- Enhanced RuntimeAnalysisRunner with custom exceptions for documentation initialization and analysis execution failures.